--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
-rvm: '2.2.3'
+rvm: '2.3.0'
 
 script:
-  - bundle exec bin/rake db:create RAILS_ENV=test
-  - bundle exec bin/rake db:migrate RAILS_ENV=test
+  - bundle exec bin/rake db:setup
   - bundle exec rspec spec
