--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 rvm: '2.3.0'
 
+script: bundle exec rspec spec
+
 script:
-  - bundle exec bin/rake db:setup
+  - bundle exec rake db:create
+  - bundle exec rake db:migrate
   - bundle exec rspec spec
