--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ script: bundle exec rspec spec
 
 script:
   - bundle exec rake db:create
-  - bundle exec rake db:migrate
+  - bundle exec rake db:migrate RAILS_ENV=test
   - bundle exec rspec spec
