--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
-rvm: '2.3.0'
+rvm: '2.2.3'
 script: bundle exec rspec spec
 script:
-  - bundle exec bin/rake db:create RAILS_ENV=test
-  - bundle exec bin/rake db:migrate RAILS_ENV=test
+  - bundle exec bin/rake db:create
+  - bundle exec bin/rake db:migrate
   - bundle exec rspec spec
+
