--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 rvm: '2.2.3'
+
+before_install:
+- sed -i '2d' Gemfile
+- sudo apt-get update -qq
+- sudo apt-get install -qq postgresql-server-dev-9.3
+
+before_script:
+  - psql -c 'create database motivation_test;' -U postgres
 script: bundle exec rspec spec
 script:
   - bundle exec bin/rake db:create
   - bundle exec bin/rake db:migrate
   - bundle exec rspec spec
-
