--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 rvm: '2.3.0'
-script: bundle exec rspec spec
 script:
-  - bundle exec bin/rake db:create RAILS_ENV=test
-  - bundle exec bin/rake db:migrate RAILS_ENV=test
-  - bundle exec rspec spec
+ - mkdir -p spec && bundle exec rspec spec
+
+before_script:
+ - psql -c 'create database motivation_test;' -U postgres
+
+# script:
+#   - bundle exec bin/rake db:create RAILS_ENV=test
+#   - bundle exec bin/rake db:migrate RAILS_ENV=test
+#   - bundle exec rspec spec
