--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
+addons:
+  postgresql: "9.4"
+before_script:
+  - psql -c 'create database motivation_test;' -U postgres
 rvm: '2.3.0'
 script: bundle exec rspec spec
 script:
-  - bundle exec bin/rake db:create RAILS_ENV=test
-  - bundle exec bin/rake db:migrate RAILS_ENV=test
+  - bundle exec bin/rake db:create
+  - bundle exec bin/rake db:migrate
   - bundle exec rspec spec
